--- a/doc/specs/void.tex
+++ b/doc/specs/void.tex
@@ -1,5 +1,8 @@
 \section{void}
 
+\dfn{void} is an entity which meaning is "no value" so that it has no
+prototype and cannot be used as a value.
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../urbi-sdk"
