--- a/doc/specs/global.tex
+++ b/doc/specs/global.tex
@@ -1,6 +1,10 @@
 \section{Global}
 
 \fixme{Lots of work to do here.}
+\dfn{Global} is designed for the purpose of being global
+namespace. Since \dfn{Object} is a prototype of \dfn{Global} and all
+objects are an \dfn{Object}, all slots of \dfn{Global} are accessible from
+anywhere.
 
 \subsection{Prototypes}
 \begin{itemize}
@@ -10,7 +14,6 @@
 \subsection{Methods}
 %\begin{itemize}
 %\end{itemize}
-
 
 %%% Local Variables:
 %%% mode: latex
