doc: fix misinterpretation.
	* doc/specs/global.tex: here.

--- a/doc/specs/global.tex
+++ b/doc/specs/global.tex
@@ -2,7 +2,7 @@
 
 \fixme{Lots of work to do here.}
 \dfn{Global} is designed for the purpose of being global
-namespace. Since \dfn{Object} is a prototype of \dfn{Global} and all
+namespace. Since \dfn{Global} is a prototype of \dfn{Object} and all
 objects are an \dfn{Object}, all slots of \dfn{Global} are accessible from
 anywhere.
 
