System.assert: improvements.
	* share/urbi/system.u (assert_op): New.
	(assert_eq): Use it.
	* doc/specs/system.tex (assert_, assert, assert_op): Document.

--- a/doc/specs/system.tex
+++ b/doc/specs/system.tex
@@ -50,6 +50,36 @@ Details on the architecture the \urbi server runs on.
   reclaims most of them: memory, file descriptors and so forth).
   Architecture dependent.
 
+\item \lstinline|assert_(\var{assertion}, \var{message})|\\
+  If \var{assertion} does not evaluate to true, throw the failure
+  \var{message}.
+\begin{urbiscript}
+assert_(true,       "true failed");
+assert_(42,         "42 failed");
+assert_(1 == 1 + 1, "one is not two");
+[00000001:error] !!! failed assertion: one is not two
+\end{urbiscript}
+
+\item \lstinline|assert(\var{assertion})|\\
+  Unless \lstinline|System.ndebug| is true, throw an error if
+  \var{assertion} is not verified.
+\begin{urbiscript}[firstnumber=last]
+assert(true);
+assert(42);
+assert(1 == 1 + 1);
+[00000002:error] !!! failed assertion: 1 == 1 . '+'(1) (1 == 2)
+\end{urbiscript}
+
+\item \lstinline|assert_op(\var{operator}, \var{lhs}, \var{rhs})|\\
+  Unless \lstinline|System.ndebug| is true, throw an error if
+  \lstinline|\var{lhs} \var{operator} \var{rhs}| is not verified.
+\begin{urbiscript}[firstnumber=last]
+assert_op("<",  1, 1 + 1);
+assert_op("<=", 1, 1 + 1);
+assert_op(">",  1, 1 + 1);
+[00000003:error] !!! failed assertion: 1 > 1 . '+'(1) (1 > 2)
+\end{urbiscript}
+
 \item \lstinline'Platform'\\
   See \refObject{System.Platform}
 
@@ -57,7 +87,7 @@ Details on the architecture the \urbi server runs on.
   Look for \var{file} in the \urbi path (\autoref{sec:tools:envvars}),
   and load it.  Throw a \lstinline|FileNotFound| error if the file
   cannot be found.  Return the last value of the file.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 // Create the file ``123.u'' that contains exactly ``123;''.
 assert(System.system("echo '123;' >123.u") == 0);
 assert(load("123.u") == 123);
