Global.Kernel1Functions: Rename as Kernel1.
	* doc/specs/global.tex: Complete the list of prototypes.
	* share/urbi/k1.u: Rename as...
	* share/urbi/kernel1.u: this.
	(Kernel1Functions): Rename as...
	(Kernel1): this.
	Use warn.
	Indentation changes.
	* share/urbi/urbi.u: Adjut.

--- a/doc/specs/global.tex
+++ b/doc/specs/global.tex
@@ -8,7 +8,11 @@ anywhere.
 
 \subsection{Prototypes}
 \begin{itemize}
+\item \refObject{Tags}
+\item \refObject{Math}
+\item \refObject{Kernel1}
 \item \refObject{System}
+\item \refObject{Object}
 \end{itemize}
 
 \subsection{Methods}
