uobjects: name it.
	* share/urbi/uobject.u (uobjects.type, UObject.type): Define.
	* src/kernel/uobject.cc: Space changes.
	* doc/specs/global.tex: Adjust the list of protos.

--- a/doc/specs/global.tex
+++ b/doc/specs/global.tex
@@ -8,6 +8,7 @@ anywhere.
 
 \subsection{Prototypes}
 \begin{itemize}
+\item \refObject{uobjects}
 \item \refObject{Tags}
 \item \refObject{Math}
 \item \refObject{Kernel1}
