--- a/doc/specs/void.tex
+++ b/doc/specs/void.tex
@@ -1,7 +1,7 @@
 \section{void}
 
-\dfn{void} is an entity which meaning is "no value" so that it has no
-prototype and cannot be used as a value.
+\dfn{void} is a very special object used to denote ``no value''.  It
+has no prototype and cannot be used as a value.
 
 %%% Local Variables:
 %%% mode: latex
