every|: no longer backgrounded.
	* doc/specs/dictionary.tex: Style change.
	* doc/specs/lang.tex, src/parser/ast-factory.cc: every| is no
	longer detached.

--- a/doc/specs/dictionary.tex
+++ b/doc/specs/dictionary.tex
@@ -17,7 +17,7 @@ objects.
 \begin{urbiscript}
 var d = Dictionary.new("one", 1, "two", 2);
 [00000001] Dictionary {"one" => 1, "two" => 2}
-for (var p in d)
+for (var p : d)
   echo (p.first + " -> " + p.second);
 [00000003] *** one -> 1
 [00000002] *** two -> 2
