--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -168,7 +168,8 @@ assert("Hello == World!".toUpper, "HELLO, WORLD!");
 \end{urbiscript}
 
 \item \lstinline|'%'(\var{args})|\\
-  It is an equivalent of \lstinline|Formater.new(this) % \var{args}|
+  It is an equivalent of \lstinline|Formatter.new(this) % \var{args}|.
+  See \refObject{Formatter}.
 %  This construct is actually more
 %  powerful than this, since it relies on
 %  \href{http://www.boost.org/doc/libs/1_39_0/libs/format/doc/format.html,
