--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -90,7 +90,8 @@ assert(x.clear == []);
 \end{urbiscript}
 
 \item \lstinline|each(\var{fun})|\\
-Apply the given functional value on all members sequentially.
+  Apply the given functional value \var{fun} on all members,
+  sequentially.
 
 \begin{urbiscript}[firstnumber=last]
 [0, 1, 2].each(function (v) {echo (v * v); echo (v * v)});
