--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -6,14 +6,15 @@ A \dfn{string} is a sequence of characters.
 \begin{itemize}
 \item \refObject{Comparable}
 \item \refObject{Orderable}
+\item \refObject{RangeIterable}
 \end{itemize}
 
 \subsection{Construction}
-The simplest way to create fresh String is by using the literal
-syntax.  Several escaping sequences (the traditional ones and \us
-specific ones) allow to insert special characters.  Consecutive
-string literals are merged together.  See
-\autoref{sec:us-syn-lit-string} for details and examples.
+Fresh Strings can easily be built using the literal syntax.  Several
+escaping sequences (the traditional ones and \us specific ones) allow
+to insert special characters.  Consecutive string literals are merged
+together.  See \autoref{sec:us-syn-lit-string} for details and
+examples.
 
 A null String can also be obtained with \lstinline|String|'s
 \lstinline|new| method.
