--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -7,6 +7,7 @@ Float is an \us primitive to represent floating point number.
 \begin{itemize}
 \item \refObject{Comparable}
 \item \refObject{Orderable}
+\item \refObject{RangeIterable}
 \end{itemize}
 
 \subsection{Construction}
@@ -151,17 +152,32 @@ for (var x : 3) { echo(x); sleep(20ms); echo (100 + x); };
 [00000000] *** 102
 \end{urbiscript}
 
+\item \lstinline'each|(\var{fun})'\\
+  Call the functional argument \var{fun} on every integer from 0 to
+  target - 1, with tight sequentiality.
+\begin{urbiscript}[firstnumber=last]
+{
+  var res = [];
+  3.'each|'(function (i) { res << 100 + i });
+  assert(res == [100, 101, 102]);
+};
+
+{
+  var res = [];
+  for|(var x : 3) { res << x; sleep(20ms); res << (100 + x); };
+  assert(res == [0, 100, 1, 101, 2, 102]);
+};
+\end{urbiscript}%>>
+
 \item \lstinline|each&(\var{fun})|\\
   Call the functional argument \var{fun} on every integer from 0 to
   target - 1, concurrently.
 \begin{urbiscript}[firstnumber=last]
-for& (var x : 3) { echo(x); sleep(20ms); echo (100 + x); };
-[00000000] *** 0
-[00000000] *** 1
-[00000000] *** 2
-[00000000] *** 100
-[00000000] *** 101
-[00000000] *** 102
+{
+  var res = [];
+  for& (var x : 3) { res << x; sleep(20ms); res << (100 + x) };
+  assert(res == [0, 1, 2, 100, 101, 102]);
+};
 \end{urbiscript}
 
 \item \lstinline|exp|\\
@@ -204,7 +220,7 @@ for (3)
 \end{urbiscript}
 
 \item \lstinline|round|\\
-  The target, rounded.
+  The target, rounded to the nearest integer.
 \begin{urbiscript}[firstnumber=last]
 assert(1.6.round == 2);
 assert(1.4.round == 1);
