liburbi: link again libuco.
Currently the dependencies are as follows (Makefile conventions):

libuco:
liburbi: libjpeg
        + libuco/uimage.cc + libuco/usound.cc + libuco/uvalue-common.cc
        + libuco/package
libuobject-sdk: libuco liburbi
libuobject-ker: libuco

Simplify so that we don't have bits and pieces of libuco used in liburbi.

	* src/libuco/README: Move to...
	* src/README: here.
	* README: Update.
	* src/liburbi/local.mk: Link against libuco.
	* src/libuobject/local.mk: Don't.

--- a/sdk-remote/src/README
+++ b/sdk-remote/src/README
@@ -1,8 +1,15 @@
--*- text -*-
+-*- outline -*-
 
+* depencies
+libuco.a:
+liburbi.so: libuco.a
+libuobject-sdk.so: liburbi.so
+libuobject-ker.so: libuco.a
+
+* libuco
 This convenience library contains code that is used both by
-kernel/libuobject and liburbi/libuobject.  (Yes, there are two
-different libuobject, ask MN for details.)
+kernel/libuobject and sdk-remote/libuobject.  (Yes, there are two
+different libuobject's.)
 
 We used to use the same sources twice, which was quite a PITA: two
 compilations, and more importantly, a terrible headache to try to
@@ -10,4 +17,4 @@ factor the Makefile snippets.  It turned out to be virtually
 impossible to share the Makefile snippets while trying to get rid of
 recursive Makefiles in SDK-Remote.
 
-The name is a contraction of library uobject-common.
+The name is a contraction of "library uobject-common".
