--- a/sdk-remote/README
+++ b/sdk-remote/README
@@ -1,4 +1,4 @@
-// Copyright (C) 2004-2008 Gostai 
+// Copyright (C) 2004-2009, Gostai
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -14,13 +14,13 @@
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 //
-// Contact: contact@gostai.com 
+// Contact: contact@gostai.com
 // URL:     http://www.gostai.com
 
 This is liburbi-cpp, a C++ library for URBI.
 It provides an API to connect to an URBI server, send messages
-(both ".AŽà la printf" and "Žà la iostream"),  register callback 
-functions that will be called when messages with a given tag 
+(both ".AŽà la printf" and "Žà la iostream"),  register callback
+functions that will be called when messages with a given tag
 is received.
 
 See the doc/ folder for the Documentation: it contains a quick
