--- a/sdk-remote/src/README
+++ b/sdk-remote/src/README
@@ -1,9 +1,8 @@
 -*- outline -*-
 
-* depencies
-libuvalue.a:
+* dependencies
 libuco.a:
-liburbi.so: libuvalue.a
+liburbi.so:
 libuobject-sdk.so: libuco.a liburbi.so
 libuobject-ker.so: libuco.a
 
@@ -19,7 +18,3 @@ impossible to share the Makefile snippets while trying to get rid of
 recursive Makefiles in SDK-Remote.
 
 The name is a contraction of "library uobject-common".
-
-
-* Dependencies
-UGenericCallback: UContext
