libuvalue: full resurection.
libuvalue is also needed by ker/libuobject.so.

Revert "libuvalue removal."
This reverts commit 78236f8f3ab4230853f28415d1ef79bb0e4cc052.

Revert "Get rid of libuvalue."
This reverts commit 55c1dbe4f1b12867e5f12dab7862ff7aaa15f12d.

	* src/Makefile.am: Fix order.
	* src/README: Complete.
	* src/libuco/local.mk: Fix dependency.

--- a/sdk-remote/src/README
+++ b/sdk-remote/src/README
@@ -1,10 +1,11 @@
 -*- outline -*-
 
-* dependencies
-libuco.a:
-liburbi.so:
+* depencies
+libuvalue.a:
+libuco.a: libuvalue.a
+liburbi.so: libuvalue.a
 libuobject-sdk.so: libuco.a liburbi.so
-libuobject-ker.so: libuco.a
+libuobject-ker.so: libuco.a libuvalue.a
 
 * libuco
 This convenience library contains code that is used both by
@@ -18,3 +19,7 @@ impossible to share the Makefile snippets while trying to get rid of
 recursive Makefiles in SDK-Remote.
 
 The name is a contraction of "library uobject-common".
+
+
+* Dependencies
+UGenericCallback: UContext
