--- a/doc/guide/k1-to-k2.tex
+++ b/doc/guide/k1-to-k2.tex
@@ -174,6 +174,10 @@ For consistency with the \Cxx syntax, \us now uses \lstinline{this}.
 
 Use \lstinline{Foo.stop} instead.
 
+\subsection{# line}
+
+Use \lstinline{//# line} instead.
+
 \section{Cookbook}
 
 
