--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -248,7 +248,7 @@ assert([0, 1, 2, 3].map(function (v) { v % 2 == 0})
 \begin{urbiscript}[firstnumber=last]
 assert([0, 1, 2, 3].range(1, 3) == [1, 2]);
 [].range(1, 3);
-[00428697:error] !!! urbi/list.u: []: invalid index: 1
+[00428697:error] !!! []: invalid index: 1
 \end{urbiscript}
 
 \item \lstinline|remove(\var{val})|\\
